--- a/src/Components/Header/TopBar.css
+++ b/src/Components/Header/TopBar.css
@@ -1,6 +1,6 @@
-.blue-bg {
+/* .blue-bg {
     background-color: #007bff;
 }
 .shadow-bottom{
     box-shadow:'0px 2px 4px rgba(0, 0, 0, 0.2)' ;
-}
+} */
